--- a/server.csproj
+++ b/server.csproj
@@ -7,4 +7,13 @@
   <ItemGroup>
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="BCrypt.Net-Core" Version="1.6.0" />
+    <PackageReference Include="mongocsharpdriver" Version="2.9.3" />
+    <PackageReference Include="MongoDB.Bson" Version="2.9.3" />
+    <PackageReference Include="MongoDB.Driver" Version="2.9.3" />
+    <PackageReference Include="MongoDB.Driver.Core" Version="2.9.3" />
+    <PackageReference Include="MongoDB.Driver.GridFS" Version="2.9.3" />
+  </ItemGroup>
+
 </Project>
